services/grafana/grafana-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: kd.itversity.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /grafana(/|$)(.*)
        backend:
          service:
            name: grafana
            port:
              number: 3000
